--- a/sass/_geral.scss
+++ b/sass/_geral.scss
@@ -15,6 +15,11 @@ body {
   margin: auto;
   width: 300px; 
   height: 450px;
+  
+  @include device(l) {
+    width: 350px;
+    height: 550px;
+  }
 }
 
 .login-form {
@@ -24,6 +29,11 @@ body {
   backdrop-filter: blur(7px);
   border-radius: 20px;
   box-shadow: 0 0 6px 1px rgba(0, 0, 0, 0.405);
+  @include device(l) {
+    width: 350px;
+    height: 550px;
+  }
+  
 }
 
 .login-form div {
